--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -45,8 +45,7 @@ javac.classpath=\
     ${libs.icefaces2-ice.classpath}:\
     ${libs.icefaces2-ace.classpath}:\
     ${libs.icefaces2-core.classpath}:\
-    ${libs.ApacheCommonsLogging.classpath}:\
-    ${libs.ApacheCommonsLoggin.classpath}
+    ${libs.ApacheCommonsLogging.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
