--- a/trunk/src/java/mensajeserror/erroresValidacion.properties
+++ b/trunk/src/java/mensajeserror/erroresValidacion.properties
@@ -2,3 +2,5 @@
 # and open the template in the editor.
 
 javax.faces.component.UIInput.REQUIRED=No puede estar vac\u00edo
+javax.faces.converter.IntegerConverter.INTEGER= Debe ser un n\u00famero
+javax.faces.converter.BigDecimalConverter.DECIMAL= Debe ser un n\u00famero
